...
            Icon(painterResource(R.drawable.ic_lyrics), stringResource(R.string.player_details))
        }
        if (outputs.switchable) {
            OutputButton(outputs, actions::onOutputs)
        }
        VolumeButton(volume, onVolume)
        IconButton(onClick = actions::onQueue, modifier = Modifier.testTag("btnQueue")) {
            Icon(painterResource(R.drawable.ic_queue_music), stringResource(R.string.nav_queue))
        }
        IconButton(onClick = actions::onDownload, modifier = Modifier.testTag("btnDownload")) {
            Icon(painterResource(R.drawable.ic_download), stringResource(R.string.player_download_song))
        }
    }
}

@Composable
...
        Text(
            song?.title ?: stringResource(R.string.player_nosong),
            style = MaterialTheme.typography.headlineMedium,
            textAlign = align,
            maxLines = 1,
            overflow = TextOverflow.Ellipsis,
            modifier = Modifier.fillMaxWidth().testTag("tvTitle"),
        )
        if (song == null) {
            return@Column
        }
        Text(
            song.artist,
...
